[package]
name = "cas"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cas"

[dependencies]
axum = "0.8.8"
miette = "7.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["fast-rng", "serde"] }
webauthn-rs = "0.5.4"
