[package]
name = "meme_battle_post"
version = "0.0.1"
edition = "2021"
authors = ["Vasiliy Kuzenkove <batbondik0@gmail.com>"]
rust-version = "1.75.0"
keywords = ["AWS", "cli", "ECS"]

[[bin]]
name = "ecs_helpers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
edit = "0.1.5"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rprompt = "2.1.1"
slug = "0.1.5"
tempfile = "3.9.0"
thiserror = "1.0.56"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.0"
predicates = "3.0.4"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.5.0"
